my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ESYNTAX_03/ESYNTAX_03.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ESYNTAX_03.dml:8:27: error ESYNTAX: syntax error at '"': illegal character
